--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "framer-motion": "^12.23.12",
     "jsonwebtoken": "^9.0.2",
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.536.0",
@@ -28,6 +29,7 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-slick": "^0.31.0",
+    "react-swipeable": "^7.0.2",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^3.3.1",
     "tailwind-scrollbar-hide": "^4.0.0"
